# AdvancedCalculator

ArithmeticFunctions/: CMakeLists.txt
ArithmeticFunctions/Tests/: CMakeLists.txt  tests.cpp
ArithmeticFunctions/include/: ArithmeticFunctionException.hh  ArithmeticFunctions.hh  Logarithm.hh
ArithmeticFunctions/src/: ArithmeticFunctions.cpp  Logarithm.cpp
BasicOperations/: CMakeLists.txt
BasicOperations/include/: BasicOperations.hh  BasicOperationsException.hh
BigInteger/: Base.tcc  BigInteger.cpp  BigInteger.hh  BigInteger.tcc  BigIntegerArithmeticOperations.cpp  BigIntegerArithmeticOperations.tcc  BigIntegerBitwiseOperations.cpp  BigIntegerComparisons.cpp  BigIntegerComparisons.tcc  BigIntegerEmptyException.hh  BigIntegerException.hh  BigIntegerUtilities.cpp  CMakeLists.txt  ConversionFailedException.hh  FourierTransform.cpp  FourierTransform.hh  InvalidStringInputException.hh
BigInteger/Tests/: ArithmeticTests.cpp  BitwiseTests.cpp  CMakeLists.txt  ComparisonTests.cpp  ConstructorTests.cpp  ConversionTests.cpp
BigIntegerWtf/: CMakeLists.txt
Complex/: CMakeLists.txt
Complex/include/: Complex.hh
Complex/src/: Complex.cpp
ConstantVariables/: CMakeLists.txt
ConstantVariables/include/: Constants.hh
ConstantVariables/src/: Constants.cpp
Functions/: AdditionOperators.cpp  AdditionOperators.hh  AdditionOperators.tcc  ArithmeticObject.cpp  ArithmeticObject.hh  ArithmeticObject.tcc  ArithmeticPointerWrapper.cpp  ArithmeticPointerWrapper.hh  ArithmeticType.hh  AssociativeOperator.cpp  AssociativeOperator.hh  AssociativeOperator.tcc  CMakeLists.txt  CustomPointer.cpp  CustomPointer.hh  Division.cpp  Division.hh  Division.tcc  DivisionOperators.cpp  DivisionOperators.hh  DivisionOperators.tcc  Equality.cpp  Equality.hh  Equality.tcc  EqualityComparable.cpp  EqualityComparable.hh  Exponentiation.cpp  Exponentiation.hh  Exponentiation.tcc  ExponentiationOperators.cpp  ExponentiationOperators.hh  ExponentiationOperators.tcc  ExpressionParser.cpp  ExpressionParser.hh  IncludeArithmeticObject.hh  IncludeDivision.hh  IncludeLogarithmMap.hh  IncludeSum.hh  IncludeValue.hh  InvalidOperationException.hh  (+33 more)
Functions/Tests/: CMakeLists.txt  DivisionOperatorsTests.cpp  DivisionTests.cpp  ExponentiationOperatorsTests.cpp  FunctionsTests.cpp  MultiplicationOperatorsTests.cpp  MultiplicationTests.cpp  ParserTests.cpp  SumOperatorsTests.cpp
Functions/Tests/lib/ci/: install-linux.sh
Functions/Tests/lib/googlemock/: CMakeLists.txt  CONTRIBUTORS
Functions/Tests/lib/googlemock/docs/: cook_book.md  for_dummies.md
Functions/Tests/lib/googlemock/include/gmock/internal/: gmock-port.h
Functions/Tests/lib/googlemock/scripts/generator/: LICENSE  README  README.cppclean
Functions/Tests/lib/googlemock/src/: gmock-internal-utils.cc  gmock-matchers.cc
Functions/Tests/lib/googletest/: CONTRIBUTORS  README.md
Functions/Tests/lib/googletest/docs/: advanced.md  faq.md
Functions/Tests/lib/googletest/include/gtest/: gtest-matchers.h  gtest-typed-test.h  gtest.h
Functions/Tests/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-port.h
Functions/Tests/lib/googletest/src/: gtest-death-test.cc  gtest.cc
Functions/Tests/lib/googletest/test/: googletest-env-var-test.py  googletest-json-output-unittest.py  googletest-output-test.py  gtest_list_output_unittest.py
IntegerFactorization/: CMakeLists.txt  PrimeFactorization.cpp  PrimeFactorization.hh
Interfaces/: CMakeLists.txt
Interfaces/include/: BitShiftable.hh  Bounded.hh  Comparable.hh  EqualityComparable.hh
ModularOperations/: CMakeLists.txt  ModularOperations.hh
Prime/: CMakeLists.txt  Prime.cpp  Prime.hh  PrimeException.hh
PrimitiveRoots/: CMakeLists.txt  PrimitiveRootException.hh  library.cpp  library.h
Random/: CMakeLists.txt  Random.cpp  Random.hh  Randomizable.hh  RandomizerException.hh
SpecialNumbers/: CMakeLists.txt  FermatNumber.cpp  FermatNumber.hh  InvalidParameterException.hh  MersenneNumber.cpp  MersenneNumber.hh
Totients/: CMakeLists.txt  Totients.hh
Transforms/: CMakeLists.txt  DiscreteFourierTransform.cpp  DiscreteFourierTransform.hh  FermatNumberTransform.cpp  FermatNumberTransform.hh  FourierTransform.cpp  FourierTransform.hh  GeneralizedFermatNumberTransform.cpp  GeneralizedFermatNumberTransform.hh  MersenneNumberTransform.cpp  MersenneNumberTransform.hh  NumberTheoreticTransform.cpp  NumberTheoreticTransform.hh  TransformException.hh
TypeTraits/: CMakeLists.txt
TypeTraits/include/: CustomTypeTraits.hh
